logs/Slang/generated/yosys/simple_rotate.sv.log
name: simple_rotate
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:20:32: error: language feature not yet supported
                        always @*
                               ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:22:45: error: too many arguments to subroutine call; expected 0 but 2 were provided
                                         in[wrap(j, i)] & (shift_amount[i] ^ direction);
                                            ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:38:1: error: language feature not yet supported
input integer pos;
^~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:39:1: error: language feature not yet supported
input integer level;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:42:15: error: use of undeclared identifier 'pos'
        out = pos - (1 << level);
              ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/rotate.v:42:27: error: use of undeclared identifier 'level'
        out = pos - (1 << level);
                          ^~~~~
